packages/webassemblyjs/test/fixtures/conversions/type-errors/reinterpret-i64-f64/module.wast
(module (func (result i64) (i64.reinterpret/f64 (i32.const 0))))
